# VulkanRenderer

./: .clang-format  CMakeLists.txt
include/: application.h  camera.h  common.h  common_glm.h  common_vulkan.h  coordinate_system.h  gpu_buffer.h  gpu_image.h  input.h  material.h  material_cache.h  mesh.h  model.h  render_object.h  renderer_state.h  scene_graph.h  scene_node.h  swapchain.h  texture.h  texture_cache.h  utils.h  vertex.h
materials/: viking_room.mtl
shaders/: shader.frag  shader.vert
src/: application.cpp  camera.cpp  gpu_buffer.cpp  gpu_image.cpp  input.cpp  main.cpp  material.cpp  material_cache.cpp  mesh.cpp  model.cpp  render_object.cpp  renderer_state.cpp  scene_graph.cpp  scene_node.cpp  swapchain.cpp  texture.cpp  texture_cache.cpp  utils.cpp  vertex.cpp
tests/: CMakeLists.txt  tests.cpp
